// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileForm component > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="FormContainer ProfileForm"
  >
    <h1>
      Update Your Profile
    </h1>
    <form
      enctype="multipart/form-data"
    >
      <div
        class="form-group"
      >
        <label>
          Current Profile Picture
        </label>
        <div
          class="pic-preview"
        >
          <img
            alt="Profile Pic Preview"
            height="150"
            src="/assets/default_pic.png"
            width="150"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="profilePic"
        >
          Change Profile Picture
        </label>
        <input
          id="profilePic"
          name="profilePic"
          type="file"
        />
      </div>
      <div
        class="form-group"
      >
        <button
          class="reset-pic"
          type="button"
        >
          Reset Profile Picture
        </button>
      </div>
      <div
        class="form-group"
      >
        <label
          for="username"
        >
          Username
        </label>
        <input
          autocomplete="username"
          disabled=""
          id="username"
          name="username"
          type="text"
          value="testuser"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="firstName"
        >
          First Name
        </label>
        <input
          id="firstName"
          name="firstName"
          required=""
          type="text"
          value="Test"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="lastName"
        >
          Last Name
        </label>
        <input
          id="lastName"
          name="lastName"
          required=""
          type="text"
          value="User"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="email"
        >
          Email
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
          value="testuser@example.com"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="birthDate"
        >
          Birth Date
        </label>
        <input
          disabled=""
          id="birthDate"
          name="birthDate"
          type="date"
          value="2000-01-01"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="location"
        >
          Location
        </label>
        <input
          id="location"
          placeholder="Type a city"
          required=""
          type="text"
          value="New York, NY"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="bio"
        >
          Bio
        </label>
        <textarea
          id="bio"
          name="bio"
          placeholder="Tell us about yourself"
        >
          Loves personality tests
        </textarea>
      </div>
      <div
        class="form-group"
      >
        <label
          for="password"
        >
          Password
        </label>
        <input
          autocomplete="current-password"
          id="password"
          name="password"
          placeholder="Enter password to confirm changes"
          required=""
          type="password"
          value=""
        />
      </div>
      <div
        class="form-actions"
      >
        <button
          class="profile-btn"
          type="submit"
        >
          Save Changes
        </button>
        <button
          class="cancel-btn"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`ProfileForm component > matches snapshot after updating profile pic 1`] = `
<DocumentFragment>
  <div
    class="FormContainer ProfileForm"
  >
    <h1>
      Update Your Profile
    </h1>
    <form
      enctype="multipart/form-data"
    >
      <div
        class="form-group"
      >
        <label>
          Current Profile Picture
        </label>
        <div
          class="pic-preview"
        >
          <img
            alt="Profile Pic Preview"
            height="150"
            src="mock-preview-url"
            width="150"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="profilePic"
        >
          Change Profile Picture
        </label>
        <input
          id="profilePic"
          name="profilePic"
          type="file"
        />
      </div>
      <div
        class="form-group"
      >
        <button
          class="reset-pic"
          type="button"
        >
          Reset Profile Picture
        </button>
      </div>
      <div
        class="form-group"
      >
        <label
          for="username"
        >
          Username
        </label>
        <input
          autocomplete="username"
          disabled=""
          id="username"
          name="username"
          type="text"
          value="testuser"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="firstName"
        >
          First Name
        </label>
        <input
          id="firstName"
          name="firstName"
          required=""
          type="text"
          value="Test"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="lastName"
        >
          Last Name
        </label>
        <input
          id="lastName"
          name="lastName"
          required=""
          type="text"
          value="User"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="email"
        >
          Email
        </label>
        <input
          id="email"
          name="email"
          required=""
          type="email"
          value="testuser@example.com"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="birthDate"
        >
          Birth Date
        </label>
        <input
          disabled=""
          id="birthDate"
          name="birthDate"
          type="date"
          value="2000-01-01"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="location"
        >
          Location
        </label>
        <input
          id="location"
          placeholder="Type a city"
          required=""
          type="text"
          value="New York, NY"
        />
      </div>
      <div
        class="form-group"
      >
        <label
          for="bio"
        >
          Bio
        </label>
        <textarea
          id="bio"
          name="bio"
          placeholder="Tell us about yourself"
        >
          Loves personality tests
        </textarea>
      </div>
      <div
        class="form-group"
      >
        <label
          for="password"
        >
          Password
        </label>
        <input
          autocomplete="current-password"
          id="password"
          name="password"
          placeholder="Enter password to confirm changes"
          required=""
          type="password"
          value=""
        />
      </div>
      <div
        class="form-actions"
      >
        <button
          class="profile-btn"
          type="submit"
        >
          Save Changes
        </button>
        <button
          class="cancel-btn"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
